WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274317
[WebGPU] Release assert trigged in PipelineLayout::offsetVectorForBindGroup
https://bugs.webkit.org/show_bug.cgi?id=274317
Summary
[WebGPU] Release assert trigged in PipelineLayout::offsetVectorForBindGroup
Mike Wyrzykowski
Reported
2024-05-17 09:45:28 PDT
[WebGPU] Release assert trigged in PipelineLayout::offsetVectorForBindGroup
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-05-17 09:45:43 PDT
radar://128065029
Mike Wyrzykowski
Comment 2
2024-05-17 09:56:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28716
EWS
Comment 3
2024-05-20 14:25:09 PDT
Committed
279013@main
(cd8059fc28fc): <
https://commits.webkit.org/279013@main
> Reviewed commits have been landed. Closing PR #28716 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug