[WebGPU] Release assert trigged in PipelineLayout::offsetVectorForBindGroup https://bugs.webkit.org/show_bug.cgi?id=274317 <radar://128065029>

Reviewed by Dan Glastonbury.

Invalid bind group should return nullptr as it already does in other
places in this member function instead of crashing the GPU process.

* LayoutTests/TestExpectations:
* LayoutTests/fast/webgpu/fuzz-274317-expected.txt: Added.
* LayoutTests/fast/webgpu/fuzz-274317.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/PipelineLayout.mm:
(WebGPU::PipelineLayout::offsetVectorForBindGroup):

Canonical link: https://commits.webkit.org/279013@main